--- a/Notebooks/DeepAR.ipynb
+++ b/Notebooks/DeepAR.ipynb
@@ -49,7 +49,16 @@
     "\n",
     "From the picture we can know, for training, $z_{i,t-1}$ and $x_{i,t}$is used to compute $h_{i,t}$. For prediction, $\\tilde{z}_{i,t_{0}-1} = z_{i,t_{0}-1}$, $\\tilde{z}_{i,t-1}$ and $x_{i,t}$ is used to compute $h_{i,t}$.\n",
     "\n",
-    "$\\tilde{z}_{i,t}$ is computed iteratively. $\\tilde{z}_{i,t-1}$ is used to computed  $h_{i,t}$ and $h_{i,t}$ is used to computed $\\tilde{z}_{i,t}$\n"
+    "$\\tilde{z}_{i,t}$ is computed iteratively. $\\tilde{z}_{i,t-1}$ is used to computed  $h_{i,t}$ and $h_{i,t}$ is used to computed $\\tilde{z}_{i,t}$\n",
+    "\n",
+    "\n",
+    "## Training\n",
+    "\n",
+    "Objective function is maximizing the log-likelihood:\n",
+    "\n",
+    "![img](04.png)\n",
+    "\n",
+    "## Applications and Experiments"
    ]
   },
   {
