--- a/Notebooks/LSTNet/LSTNet.ipynb
+++ b/Notebooks/LSTNet/LSTNet.ipynb
@@ -7,6 +7,9 @@
    "source": [
     "# LSTNet\n",
     "\n",
+    "\n",
+    "[DeepAR: Probabilistic Forecasting with Autoregressive Recurrent Networks](https://arxiv.org/abs/1703.07015)\n",
+    "\n",
     "## ABSTRACT\n",
     "\n",
     "To address a mixture of long-term and short-term patterns.\n",
