--- a/Notebooks/LSTNet/LSTNet.ipynb
+++ b/Notebooks/LSTNet/LSTNet.ipynb
@@ -8,7 +8,7 @@
     "# LSTNet\n",
     "\n",
     "\n",
-    "[DeepAR: Probabilistic Forecasting with Autoregressive Recurrent Networks](https://arxiv.org/abs/1703.07015)\n",
+    "[Modeling Long- and Short-Term Temporal Patterns with Deep Neural Networks](https://arxiv.org/abs/1703.07015)\n",
     "\n",
     "## ABSTRACT\n",
     "\n",
