--- a/Notebooks/LSTNet/LSTNet.ipynb
+++ b/Notebooks/LSTNet/LSTNet.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "615f5982",
    "metadata": {},
@@ -21,7 +22,28 @@
     "\n",
     "It leverages the strengths of both the convolutional layer to discover the local dependency patterns among multi-dimensional input variables and the recurrent layer to captures complex long-term dependencies.\n",
     "\n",
-    "Recurrent-skip, is designed for capturing very long-term dependence patterns and making the optimization easier as it utilizes the periodic property of the input time series signals."
+    "Recurrent-skip, is designed for capturing very long-term dependence patterns and making the optimization easier as it utilizes the periodic property of the input time series signals.\n",
+    "\n",
+    "## 3 FRAMEWORK\n",
+    "\n",
+    "![img](01.JPG)\n",
+    "\n",
+    "### 3.2 Convolutional Component\n",
+    "![img](02.JPG)\n",
+    "\n",
+    "### 3.3 Recurrent Component\n",
+    "![img](03.JPG)\n",
+    "\n",
+    "### 3.4 Recurrent-skip Component\n",
+    "![img](04.JPG)\n",
+    "\n",
+    "### Combine\n",
+    "![img](05.JPG)\n",
+    "\n",
+    "### 3.5 Temporal Attention Layer\n",
+    "![img](06.JPG)\n",
+    "\n",
+    "![img](07.JPG)"
    ]
   },
   {
