--- a/Notebooks/TPA/TPA.ipynb
+++ b/Notebooks/TPA/TPA.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "e0088608",
+   "id": "c7e6a64d",
    "metadata": {},
    "source": [
     "# TPA\n",
@@ -26,13 +26,21 @@
     "- the LSTNet-Skip model is specifically designed for MTS data with periodic patterns, whereas our proposed model, as shown in our experiments, is simple and adaptable to various datasets, even non-periodic ones\n",
     "- the attention layer in LSTNet-Attn model selects a relevant hidden state as in typical attention mechanism, whereas our proposed attention mechanism selects relevant time series which is a more suitable mechanism for MTS data.\n",
     "\n",
-    "## 4 Temporal Pattern Attention\n"
+    "## 4 Temporal Pattern Attention\n",
+    "\n",
+    "### 4.2 Temporal Pattern Detection using CNN\n",
+    "\n",
+    "### 4.3 Proposed Attention Mechanism\n",
+    "![img](01.JPG)\n",
+    "![img](02.JPG)\n",
+    "![img](03.JPG)\n",
+    "![img](04.JPG)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "59f0d2cf",
+   "id": "ef2a058d",
    "metadata": {},
    "outputs": [],
    "source": []
