--- a/Notebooks/TCN/TCN.ipynb
+++ b/Notebooks/TCN/TCN.ipynb
@@ -12,9 +12,22 @@
     "\n",
     "Our results indicate that a simple convolutional architecture outperforms canonical recurrent networks such as LSTMs across a diverse range of tasks and datasets, while demonstrating longer effective memory.\n",
     "\n",
+    "## 1 Introduction\n",
     "This architecture is informed by recent research, but is deliberately kept simple, combining some of the best practices of modern convolutional architectures.\n",
     "\n",
-    "The results suggest that TCNs convincingly outperform baseline recurrent architectures across a broad range of sequence modeling tasks.\n"
+    "The results suggest that TCNs convincingly outperform baseline recurrent architectures across a broad range of sequence modeling tasks.\n",
+    "\n",
+    "## 3 Temporal Convolutional Networks\n",
+    "Our aim is to distill the best practices in convolutional network design into a simple architecture that can serve as a convenient but powerful starting point.\n",
+    "\n",
+    "The distinguishing characteristics of TCNs are:\n",
+    "\n",
+    "- The convolutions in the architecture are causal, meaning that there is no information “leakage” from future to past;\n",
+    "- The architecture can take a sequence of any length and map it to an output sequence of the same length, just as with an RNN.\n",
+    "- We emphasize how to build very long effective history sizes we emphasize how to build very long effective history sizes using a combination of very deep networks (augmented with residual layers) and dilated convolutions.\n",
+    "\n",
+    "### 3.1. Sequence Modeling\n",
+    "![img](01.jpg)"
    ]
   },
   {
