--- a/Notebooks/TCN/TCN.ipynb
+++ b/Notebooks/TCN/TCN.ipynb
@@ -27,7 +27,19 @@
     "- We emphasize how to build very long effective history sizes we emphasize how to build very long effective history sizes using a combination of very deep networks (augmented with residual layers) and dilated convolutions.\n",
     "\n",
     "### 3.1. Sequence Modeling\n",
-    "![img](01.jpg)"
+    "![img](01.jpg)\n",
+    "\n",
+    "### 3.2. Causal Convolutions\n",
+    "\n",
+    "### 3.3. Dilated Convolutions\n",
+    "\n",
+    "### 3.3. Dilated Convolutions\n",
+    "\n",
+    "### 3.4. Residual Connections\n",
+    "\n",
+    "### 3.5. Discussion\n",
+    "\n",
+    "## 6. Conclusion"
    ]
   },
   {
@@ -54,7 +66,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
